clusters/prod/infra/ingress/traefik.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik
  namespace: kube-system
spec:
  gatewayClassName: traefik
  listeners:
    - name: web-gw
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: Same
    - name: web-internal-gw
      protocol: HTTP
      port: 8001
      allowedRoutes:
        namespaces:
          from: Same
    - name: jf-gw
      protocol: TCP
      port: 3000
      allowedRoutes:
        namespaces:
          from: Same
