clusters/prod/infra/ingress/jackett.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jackett-route
  namespace: kube-system
spec:
  parentRefs:
    - name: traefik
      sectionName: web-internal-gw
  rules:
    - matches:
        - path:
            value: "/jackett"
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
    - backendRefs:
      - name: jackett
        port: 9117
