clusters/prod/infra/ingress/jellyfin.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-route
  namespace: kube-system
spec:
  parentRefs:
    - name: traefik
      sectionName: web-internal-gw
  hostnames:
    - jellyfin.internal
  rules:
    - backendRefs:
      - name: jellyfin
        port: 8096
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-nodeport
  namespace: kube-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: jellyfin
  ports:
    - protocol: TCP
      port: 8096
      targetPort: 8096
      nodePort: 30005
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-internet
  namespace: kube-system
spec:
  parentRefs:
    - name: traefik
      sectionName: jf-gw
  rules:
    - backendRefs:
      - name: jellyfin
        port: 8096
