clusters/prod/infra/ingress/mc.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mc-route
  namespace: kube-system
spec:
  parentRefs:
    - name: traefik-gateway
      sectionName: mc-gw
    rules:
      - backendRefs:
        - name: mc-server
          port: 80
