clusters/prod/infra/ingress/prowlarr.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-route
  namespace: kube-system
spec:
  parentRefs:
    - name: traefik
      sectionName: web-internal-gw
  hostnames:
    - prowlarr.internal
  rules:
    - backendRefs:
      - name: prowlarr
        port: 9696
