clusters/prod/infra/ingress/qbittorrent.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-route
  namespace: kube-system
spec:
  parentRefs:
    - name: traefik
      sectionName: web-internal-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/qbt"
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: qbittorrent
          port: 8080
