clusters/prod/infra/ingress/radarr.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-route
  namespace: kube-system
spec:
  parentRefs:
    - name: traefik
      sectionName: web-internal-gw
  rules:
    - matches:
        - path:
            value: "/radarr"
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
    - backendRefs:
      - name: radarr
        port: 7878
