clusters/prod/infra/ingress/sonarr.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-route
  namespace: kube-system
spec:
  parentRefs:
    - name: traefik
      sectionName: web-internal-gw
  hostnames:
    - sonarr.internal
  rules:
      backendRefs:
      - name: sonarr
        port: 8989
